👹💒 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
       </div>
 
       <div class="border-box" id="three">
+          <div class="background-flower-two alt2"></div>
         <div class="border-box turned"></div>
+        <div class="background-flower alt"></div>
+        <div class="border-dots"></div>
         <div class="container">
-          <p>
-            tjena
+          <p>tjena
           </p>
         </div>
       </div>
